--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-e
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Weather APP</title>
+</head>
+
+<body>
+    <Header class="container-fluid text-center text-black bg-white p-2">
+        <h1>Weather App</h1>
+    </Header>
+
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-lg-3 bg-light">
+                <h5 class="mt-1">Enter a city or town:</h5>
+                <div class="form-inline form-group">
+                    <input class="form-control" type="text" id="search-value" />
+                    <button class="btn btn-primary" id="search-button"><i>class="fa fa-search"></i></button>
+                </div>
+                <ul class="list-group history"></ul>
+            </aside>
+       
+       
+        </div>
+    </div>
+
+</body>
+</html>
